# tap-clerk

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  state.json
.github/workflows/: test.yml
extract/output/: users.jsonl
tap_clerk/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
